# openFC-CM4-Firmware

./: CMakeLists.txt  lsm6ds3.c  lsm6ds3.h  main.c  openFC_sensAcq_rp2040.h  sensAcqImpl.c  sensAcqImpl.h  timeSens.c  timeSens.h  usb_common.h  usb_device.c  usb_device.h  usb_hal.c  usb_hal.h
